java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint6-hints.pass
[AddCastFix:...toArray(...):JButton[]]
Change type of s to Object[]
